# jira-utilities

./: .env.example  .gitignore  12.2.related.draw.io  AGENTS.md  README.md  confluence_utils.py  daily_report.py  drawio_utilities.py  excel_utils.py  jira_utils.py  jql.txt  main.py  mcp_server.py  pm_agent.py  pyproject.toml  release_tracker_cli.py  requirements.txt  run_bug_report.sh  test-diagram.drawio  test-related.drawio  ticket_monitor_cli.py
.github/workflows/: tests.yml
6/merge/: index.html  test-report.html
7/merge/: index.html  test-report.html
agents/: __init__.py  base.py  feature_plan_builder.py  feature_planning_models.py  feature_planning_orchestrator.py  gantt_agent.py  gantt_components.py  gantt_models.py  hardware_analyst.py  jira_analyst.py  orchestrator.py  planning_agent.py  release_tracker.py  research_agent.py  review_agent.py  scoping_agent.py  ticket_monitor.py  vision_analyzer.py
agents/prompts/: cn5000_bugs_clean.md
config/: __init__.py  release_tracker.yaml  settings.py  ticket_monitor.yaml
config/prompts/: feature_plan_builder.md  feature_planning_orchestrator.md  gantt_agent.md  hardware_analyst.md  (+7 more)
core/: __init__.py  monitoring.py  queries.py  release_tracking.py  reporting.py  tickets.py  utils.py
docs/: agent-usefulness-and-applications.md  architecture.md  jira-utilities-agent-workforce-mapping.md  standalone-utilities.md  tools-reference.md
jenkins/: jenkins_bug_report.sh
llm/: __init__.py  base.py  config.py  cornelis_llm.py  litellm_client.py
main/: index.html  test-report.html
notifications/: __init__.py  base.py  jira_comments.py
plans/: agent-pipeline-architecture.md  build-excel-map-architecture.md  conversation-summary.md  daily-report-tool-design.md  feature-planning-agent-architecture.md  full-workflow-fix.md  user-resolver-design.md  workflow-design-analysis.md
refactor-jira-utils/: index.html  test-report.html
state/: __init__.py  gantt_dependency_review_store.py  gantt_snapshot_store.py  learning.py  monitor_state.py  persistence.py  session.py
synching-tools-to-agent-capabilities/: index.html  test-report.html
tests/: conftest.py  test_agents_char.py  test_cli_entry_points.py  test_confluence_tools_char.py  test_confluence_utils_char.py  test_core_queries_coverage.py  test_core_reporting.py  test_core_tickets.py  test_core_utils.py  test_excel_utils_char.py  test_excel_utils_coverage.py  test_file_tools_char.py  test_gantt_agent_char.py  test_gantt_components_char.py  test_gantt_tools_char.py  test_jira_tools_char.py  test_jira_utils_char.py  test_jira_utils_coverage.py  test_learning.py  test_mcp_server_char.py  test_mcp_server_confluence_char.py  test_mcp_server_coverage.py  test_mcp_server_gantt_char.py  test_monitor_state.py  test_monitoring.py  test_notifications.py  test_release_tracker.py  test_smoke.py  test_ticket_monitor.py
tools/: __init__.py  base.py  confluence_tools.py  drawio_tools.py  excel_tools.py  file_tools.py  gantt_tools.py  jira_tools.py  knowledge_tools.py  mcp_tools.py  plan_export_tools.py  vision_tools.py  web_search_tools.py
(+62 files in other folders)
